@@ -1,5 +1,6 @@
 #pragma once
 #include "playlist.h"
+#include "utils/CherryPatch.h"
 
 //#define SKIN_VERSION_1_3 1
 
@@ -34,7 +35,7 @@ public:
   static bool GetParentPath(const CStdString& strPath, CStdString& strParent);
   static void GetQualifiedFilename(const CStdString &strBasePath, CStdString &strFilename);
   static void RunXBE(const char* szPath, char* szParameters = NULL);
-  static void LaunchXbe(char* szPath, char* szXbe, char* szParameters);
+  static void LaunchXbe(char* szPath, char* szXbe, char* szParameters, F_VIDEO ForceVideo=VIDEO_NULL, F_COUNTRY ForceCountry=COUNTRY_NULL);
   static bool FileExists(const CStdString& strFileName);
   static void GetDirectory(const CStdString& strFilePath, CStdString& strDirectoryPath);
   static void GetThumbnail(const CStdString& strFileName, CStdString& strThumb);
