@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 06-05-2005 added: SF patch [1194146] video mode switch based on game region - thanks to spiff
   - 06-05-2005 added: SF patch [1196174] make trailing fill characters be part of tag in music template - thanks to spiff
   - 06-05-2005 added: SF patch [1188623] Hides the .py extension when HME is checked - thanks to Nuka1195
   - 06-05-2005 added: SF patch [1196172] remove trailing dash for rss-feeds - thanks to spiff
